# SelfHarness

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  pyproject.toml  serve-console.sh
.github/workflows/: ci.yml  release.yml
docs/: README.md  research-backed-improvements.md
docs/architecture/: audit_schema_policy.md  benchmark_report_schema.md  glm_p100_next_production_slice_convergence.md  glm_p100_next_production_slice_plan.md  glm_p101_next_production_slice_convergence.md  glm_p101_next_production_slice_plan.md  glm_p102_next_production_slice_convergence.md  glm_p102_next_production_slice_plan.md  glm_p103_next_production_slice_convergence.md  glm_p103_next_production_slice_plan.md  glm_p104_next_production_slice_convergence.md  glm_p104_next_production_slice_plan.md  glm_p105_next_production_slice_convergence.md  glm_p105_next_production_slice_plan.md  glm_p106_next_production_slice_convergence.md  glm_p106_next_production_slice_plan.md  glm_p107_next_production_slice_convergence.md  glm_p107_next_production_slice_plan.md  glm_p108_next_production_slice_convergence.md  glm_p108_next_production_slice_plan.md  glm_p109_next_production_slice_convergence.md  glm_p109_next_production_slice_plan.md  glm_p10_benchmark_execution_convergence.md  glm_p10_benchmark_execution_plan.md  glm_p110_next_production_slice_convergence.md  glm_p110_next_production_slice_plan.md  glm_p111_next_production_slice_convergence.md  glm_p111_next_production_slice_plan.md  glm_p112_next_production_slice_convergence.md  glm_p112_next_production_slice_plan.md  glm_p113_next_production_slice_convergence.md  glm_p113_next_production_slice_plan.md  glm_p11_harbor_artifact_ingest_convergence.md  glm_p11_harbor_artifact_ingest_plan.md  glm_p12_production_readiness_convergence.md  glm_p12_production_readiness_plan.md  glm_p13_release_artifact_convergence.md  glm_p13_release_artifact_plan.md  glm_p15_corpus_signing_convergence.md  glm_p15_corpus_signing_plan.md  (+232 more)
docs/governance/: source_of_truth.md
docs/operations/: agentic_runner.md  attestations.md  audit_migration.md  audit_verify_live.md  benchmark_reproduction_readiness.md  benchmark_reproduction_requirements.json  capture_admit.md  capture_extract.md  capture_manifest.md  code_cli.md  external_signer.md  harbor_discovery.md  minerva_deployment.md  model_backend_preflight.md  operator_bundle.md  operator_policy_binding.md  operator_promotion.md  provider_seams.md  readiness_matrix.json  (+7 more)
examples/: agentic_corpus.json  local_corpus.json
scripts/: audit_verify_live.py  build_live_audit_verify_fixture.py  build_provenance.py  build_structural_attestation_fixture.py  capture_admit.py  capture_extract.py  capture_manifest_build.py  capture_manifest_diff.py  capture_manifest_verify.py  capture_rehearsal.py  container_preflight_report.py  deploy_minerva.sh  example_external_signer.py  harbor_discovery.py  model_backend_preflight.py  operator_policy_binding_verify.py  operator_preflight.py  operator_promotion_preflight.py  readiness_drift_report.py  readiness_matrix_report.py  readiness_promotion_report.py  release_candidate_evidence.py  release_smoke.py  reproduction_bundle_build.py  reproduction_bundle_verify.py  reproduction_readiness_artifact_shape_lint.py  reproduction_readiness_report.py  scanner_db_update.py  scanner_run.py  sign_capture_manifest.py  sign_provenance.py  sign_reproduction_bundle.py  verify_attestation.py  verify_provenance.py  verify_provenance_signature.py  verify_reproducible_build.py  vuln_check.py
tests/: conftest.py  test_agent_adapter.py  test_agentic_runner.py  test_agentic_session.py  test_anthropic_messages_transport.py  test_attestations_structural.py  test_audit.py  test_audit_migration.py  test_audit_migration_framework.py  test_audit_verify.py  test_audit_verify_live.py  test_benchmark_report.py  test_capture_admit.py  test_capture_extract.py  test_capture_manifest.py  test_capture_manifest_build.py  test_capture_rehearsal.py  test_cli.py  test_cli_agent.py  test_cli_home.py  test_config.py  test_console_style.py  test_container_preflight_report.py  test_container_verifier.py  test_corpus.py  test_corpus_keyring.py  test_corpus_signing.py  test_engine_demo.py  test_engine_subprocess_determinism.py  test_evaluation.py  test_external_signer.py  test_external_signer_cli.py  test_freshness_policy.py  test_harbor_artifacts.py  test_harbor_command.py  test_harbor_discovery.py  test_harbor_ingest_cli.py  test_harbor_output.py  test_harness.py  test_harness_profiles.py  (+46 more)
(+214 files in other folders)
