[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "self-harness"
version = "0.1.0"
description = "A small, auditable implementation of the Self-Harness loop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [{ name = "SelfHarness contributors" }]
dependencies = ["rich>=13"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
anthropic = [
  "anthropic>=0.40,<1.0",
]
dev = [
  "build>=1.2",
  "cryptography>=42",
  "hatchling>=1.25",
  "mypy>=1.13",
  "pytest>=8.0",
  "ruff>=0.8",
]
provenance = [
  "cryptography>=42",
]
release = [
  "build>=1.2",
  "cyclonedx-bom>=5.0",
  "hatchling>=1.25",
]
sigstore = [
  "sigstore>=3.6.7,<4",
]
terminal-bench = []
vuln = [
  "pip-audit>=2.7",
]

[project.scripts]
self-harness = "self_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/self_harness"]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/README.md",
  "/RELEASE.md",
  "/SECURITY.md",
  "/docs/README.md",
  "/docs/architecture",
  "/docs/assets",
  "/docs/governance",
  "/docs/operations",
  "/docs/source/audit_trajectory.md",
  "/docs/source/audit_integrity.md",
  "/docs/source/llm_proposer_integration.md",
  "/examples",
  "/pyproject.toml",
  "/scripts",
  "/src",
  "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "." keeps the repo root importable so tests that exercise scripts/ resolve under the bare
# `pytest` entrypoint as well as `python -m pytest` (which adds the cwd implicitly).
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# ui.py embeds the operator console as a single HTML/CSS/JS template string; its markup lines
# legitimately exceed the Python line-length budget and are not reflowable as code.
"src/self_harness/ui.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["self_harness"]
strict = true
warn_unused_configs = true
